--- a/views/career.html
+++ b/views/career.html
@@ -197,14 +197,15 @@
 
 <a href='https://defiant-sodalite-85a.notion.site/Beta-6dfeaaf6dd024663a7467620ca7dad24' target='_blank'
   class="ui button shadow-lg pBtn Gray_4" id='shortcut'>
-  채용공고 보러가기
+  {% block x1 %}채용공고 보러가기{% endblock %}
 </a>
 <!-- </div> -->
 
 <section id='banner' class='container masthead'>
   <div class='row'>
     <div class='col-8'>
-      <h1 class='text-c'> {{ zc[1] }}</h1>
+      <h1 class='text-c'>{% block x2 %} 함께이기에 <br />
+        더 빛이 나는 사람들 {% endblock %},</h1>
     </div>
     <div class='col-4 d-flex '>
       <h1 class='Point_1 mt-auto c-text-2'>CN.TEAMS</h1>
@@ -215,19 +216,19 @@
 
 
 
-<section class='isBg' style='background: linear-gradient(180deg, #FFFFFF 0%, #F8F8FF 68.75%, #F0F0FF 100%);'>
+<section class='isBg' style='background: linear-gradient(180deg, #FFFFFF 0%, #F8F8FF 68.75%, #F0F0FF 100%);' id ='ourValue'>
 
   <!-- linear-gradient(180deg, rgba(248, 248, 255, 0) 0%, #F8F8FF 64.22%); -->
   <section class="box d-flex" style="margin-top: 13vh; margin-bottom: 18vh;">
     <div class="text-center align-self-center mx-auto">
       <h5 class="SubTitle_1 Gray_2 ">How we work</h5>
-      <h3 class="mt-3 Gray_1 Title_2">우리가 성장하는 방식 </h3>
+      <h3 class="mt-3 Gray_1 Title_2">{% block x3 %}우리가 성장하는 방식 {% endblock %}</h3>
     </div>
   </section>
 
 
 
-  <section id='cards' class='v-75'>
+  <section id='cards' class='v-75' id = 'ourTeam'>
     <!-- Swiper -->
 
     <div class="swiper career-slide h-100">
@@ -270,8 +271,8 @@
 
   <section id='teamIntroduction'>
     <div class='text-center' style='margin-top:30vh; margin-bottom:20vh;'>
-      <span class='team-intro Title_1 Gray_3'><span class='Point_1'>씨</span>앤에이아이 <span class='Point_1'>팀</span>을 <span
-          class='Point_1'>소</span>개합니다!</span>
+      <span class='team-intro Title_1 Gray_3'>{% block x4 %}<span class='Point_1'>씨</span>앤에이아이 <span class='Point_1'>팀</span>을 <span
+          class='Point_1'>소</span>개합니다!</span>{% endblock %}
     </div>
 
     <div class="offset-lg-2">
@@ -288,12 +289,12 @@
             {% if s.question == 1 %}
             <div class="swiper-slide w1">
               <div class="card border-0 mb-3 shadow member mt-5 w-100 p-4 rounded-4" style="height: 45vh;">
-                <p class="Title_2 ">나는 CN.AI의 <br /><span class='Title_1' style="color: #{{ s.color }} ">{{ s.title
-                    }}</span></p>
+                <p class="Title_2 ">나는 CN.AI의 <br /><span class='Title_1' style="color: #{{ s.color }} ">
+                  {{ s.title  }}</span></p>
                 <button class=" border-0 bg-transparent btn-sm-member m{{ loop.index }}-btn btn-sm-1"
                  ' onclick="showUp2($(this).attr('id')) " id="m{{ loop.index }}">   <img src = '/img/icon/07 dropdown.png' class = 'btn-sm-1'></button>
                 <div class="card-body Gray_2 m{{ loop.index }} d-none">
-                  <p class="card-text">{{ s.content | striptags(true) | escape | nl2br}}</p>
+                  <p class="card-text Body_2 Gray_2">{{ s.content | striptags(true) | escape | nl2br}}</p>
                 </div>
                 <div class="card-footer mt-auto bg-transparent border-0 Gray_1 member-Tab">{{ s.writer }}</div>
               </div>
@@ -387,15 +388,17 @@
 <section class='process'>
   <!-- height: 150vh; -->
   <div style='margin-bottom: 6rem; padding-top:12vh '>
-    <h1 class='text-center Title_1 Gray_1'>영입 절차 </h1>
-    <p class='text-center Point_1 Body_1'>지원 후 2주 내 최종 발표 진행</p>
+    <h1 class='text-center Title_1 Gray_1'>{% block x5 %}영입 절차{% endblock %} </h1>
+    <p class='text-center Point_1 Body_1'>{% block x6 %}지원 후 2주 내 최종 발표 진행{% endblock %}</p>
   </div>
 
   <div class='row'>
-    <div class='col-md-2 d-none d-md-block Body_1 Gray_0 mt-4 ' style='position:absolute' id='c2-text'>지원자의 역량을 확인하기 위한
-      인적성 적합도 평가 과정</div>
-    <div class='col-md-2 Body_1 Gray_0 d-none d-md-block ' style='position:absolute' id='c4-text'>3개월간의 수습 기간 동안
-      적합도 평가를 통해 정직원 전환 진행</div>
+    <div class='col-md-2 d-none d-md-block Body_1 Gray_0 mt-4 ' style='position:absolute' id='c2-text'>
+      {% block x10 %}지원자의 역량을 확인하기 위한
+      인적성 적합도 평가 과정{% endblock %}</div>
+    <div class='col-md-2 Body_1 Gray_0 d-none d-md-block ' style='position:absolute' id='c4-text'>
+      {% block x14 %}3개월간의 수습 기간 동안
+      적합도 평가를 통해 정직원 전환 진행{% endblock %}</div>
   </div>
 
   <div class="row justify-content-center  my-4 py-5">
@@ -404,7 +407,7 @@
       <div class="circle-text text-white">
         <p class="label mb-2"> 01</p>
         <div class="col-md-3 mx-auto mb-3" style="border-bottom: 2px solid white"></div>
-        <p class="Title_3">서류 평가 </p>
+        <p class="Title_3">{% block x7 %}서류 평가{% endblock %} </p>
       </div>
       <div class="d-flex position-absolute bottom-0 start-50 translate-middle-x">
         <div class="v1-down mx-auto" style='height: 9.3rem;'></div>
@@ -417,7 +420,7 @@
       <div class='circle-text Gray_1'>
         <p class='label mb-2'> 02</p>
         <div class="col-md-3 mx-auto mb-3" style="border-bottom: 2px solid #4E5968"></div>
-        <p class='Title_3'>인적성 검사 </p>
+        <p class='Title_3'>{% block x9 %}인적성 검사{% endblock %} </p>
       </div>
       <div class="d-flex position-absolute top-0 start-50 translate-middle-x">
         <div class="v1-up mx-auto" style='height: 9.3rem;'></div>
@@ -428,8 +431,8 @@
       <div class='circle-text text-white'>
         <p class='label'> 03</p>
         <div class="col-md-3 mx-auto mb-3" style="border-bottom: 2px solid white"></div>
-        <p class='Title_3'>역량 / 문화 <br />
-          인터뷰</p>
+        <p class='Title_3'>{% block x11 %}역량 / 문화 <br />
+          인터뷰{% endblock %}</p>
       </div>
       <div class="d-flex position-absolute bottom-0 start-50 translate-middle-x">
         <div class="v1-down mx-auto" style='height: 7rem;'></div>
@@ -441,7 +444,7 @@
       <div class='circle-text Gray_1'>
         <p class='label'> 04</p>
         <div class="col-md-3 mx-auto mb-3" style="border-bottom: 2px solid #4E5968"></div>
-        <p class='Title_3'>정직원 채용 </p>
+        <p class='Title_3'>{% block x13 %}정직원 채용{% endblock %} </p>
       </div>
       <div class="position-absolute top-0 start-50 translate-middle-x">
         <div class="v1-up mx-auto" style='height: 10rem;'></div>
@@ -449,23 +452,22 @@
     </div>
 
     <div class='row mt-4'>
-      <div class='col-md-2 Body_1 Gray_0 d-none d-md-block ' style='position:absolute' id='c1-text'>실무진들의 면밀한 검토를
-        통한 서류 평가 과정 </div>
-      <div class='col-md-3 Body_1 Gray_0 mt-4 d-none d-md-block ' style='position:absolute' id='c3-text'>역량, 컬쳐핏이 CN과
-        부합하는지
-        알아보기 위한 역량/문화 인터뷰</div>
+      <div class='col-md-2 Body_1 Gray_0 d-none d-md-block ' style='position:absolute' id='c1-text'>{% block x8 %}실무진들의 면밀한 검토를
+        통한 서류 평가 과정{% endblock %} </div>
+      <div class='col-md-3 Body_1 Gray_0 mt-4 d-none d-md-block ' style='position:absolute' id='c3-text'>{% block x12 %}역량, 컬쳐핏이 CN과
+        부합하는지 알아보기 위한 역량/문화 인터뷰{% endblock %}</div>
     </div>
 
   </div>
 
 
-  <div class='container' style="padding-top: 23vh; padding-bottom: 23vh;">
+  <div class='container' style="padding-top: 23vh; padding-bottom: 23vh;" id = 'navi-2'>
     <div class='col'>
       <span class="ui huge label bg-white Gray_1 mx-2">
-        채용 문의
+        {% block x15 %}채용 문의{% endblock %}
       </span>
       <a href='mailto:hr_team@cnai.ai' class='Gray_0'>hr_team@cnai.ai</a>
-      <a href='mailto:hr_team@cnai.ai' class='Gray_2'>문의하기 > </a>
+      <a href='mailto:hr_team@cnai.ai' class='Gray_2'>문의하기 <img src = '/img/icon/10 more-right-small_gray4.png' class = 'btn-sm-24'> </a>
     </div>
   </div>
 
