--- a/views/community.html
+++ b/views/community.html
@@ -40,15 +40,15 @@
   <div class="card-img-overlay">
 <section class="py-5 text-center container-fluid mb-5 text-light h-auto">
   <div class = 'Title_1' style="margin-top: 40vh;" data-aos="fade-up">
-    CN.AI의 소식을 알려드립니다.
+    {% block x1 %}CN.AI의 소식을 알려드립니다.{% endblock %}
   </div>
 </section>
 </div>
 </section>
 
 
-<section id='news' class='container'>
-  <p class='my-5 Title_1 Gray_1'>{% block e1 %}한발 빠르게 받아보는 소식 {% endblock%}</p>
+<section id='news' class='container' id = 'RecentNews'>
+  <p class='my-5 Title_1 Gray_1'>{% block x2 %}한발 빠르게 받아보는 소식 {% endblock%}</p>
   <div class="ui pointing secondary menu border-0">
     <a class="item active " data-tab="first">Recent News</a>
     <a class="item d-none " data-tab="second">Publications</a>
@@ -139,7 +139,7 @@
 
   <div id='c-box-1' class='container' style = 'margin-top: 90vh; margin-bottom: 90vh;'>
     <p class='SubTitle_1 Gray_2 mb-5'>Official Channel</h5>
-    <p class='Gray_1 Title_1'>CN.AI의 다양한 채널을 만나보세요.</h1>
+    <p class='Gray_1 Title_1'>{% block x4 %}CN.AI의 다양한 채널을 만나보세요.{% endblock %}</h1>
 
     <div class='row' >
       <div class='col-12 col-md'>
@@ -160,7 +160,7 @@
               </div>
               <div class="col-md-4">
                 <a href="https://www.instagram.com/cnai.ai/" target = '_blank'>
-                <img src="img/4/01 cnaiai.png" class="img-fluid rounded-start" style="height: 5rem;" alt="...">
+                <img src="/img/4/01 cnaiai.png" class="img-fluid rounded-start" style="height: 5rem;" alt="...">
               </a>
               </div>
             </div>
@@ -182,7 +182,7 @@
               </div>
               <div class="col-md-4">
                 <a href="https://www.instagram.com/cn.table/" target = '_blank'>
-                  <img src="img/4/02 cntable.png" class="img-fluid rounded-start" style="height: 5rem;" alt="...">
+                  <img src="/img/4/02 cntable.png" class="img-fluid rounded-start" style="height: 5rem;" alt="...">
                 </a>
               </div>
             </div>
@@ -204,7 +204,7 @@
             </div>
             <div class="col-md-4">
               <span href="#" target = '_blank' >
-              <img src="img/4/03 github.png" class="img-fluid rounded-start" style="height: 5rem;" alt="...">
+              <img src="/img/4/03 github.png" class="img-fluid rounded-start" style="height: 5rem;" alt="...">
               </span>
             </div>
           </div>
@@ -225,7 +225,7 @@
               </div>
             </div>
             <div class="col-md-4">
-              <img src="img/4/04 youtube.png" class="img-fluid rounded-start" style="height: 5rem;" alt="...">
+              <img src="/img/4/04 youtube.png" class="img-fluid rounded-start" style="height: 5rem;" alt="...">
             </div>
           </div>
         </div>
