--- a/views/company.html
+++ b/views/company.html
@@ -45,7 +45,7 @@ line-height: 150%;
 
 <div class='isBg-1 card rounded-0 border-0 masthead'>
   <video autoplay muted loop id="myVideo">
-    <source src="img/2/2.mov" type="video/mp4">
+    <source src="/img/2/2.mov" type="video/mp4">
   </video>
   <div class="card-img-overlay h-100">
     <div class="container h-100 justify-content-center text-center align-items-center d-flex" >
@@ -97,8 +97,8 @@ line-height: 150%;
 <!-- masthead  -->
 
 
-<section class="card bg-transparent border-0 rounded-0">
-  <img src="img/2/1.png" class="card-img rounded-0">
+<section class="card bg-transparent border-0 rounded-0" id = 'CN-HP02-3'>
+  <img src="/img/2/1.png" class="card-img rounded-0">
   <div class="card-img-overlay d-flex ">
     <div class="mt-auto mb-5 container" data-aos="fade-up">
 
@@ -135,7 +135,7 @@ line-height: 150%;
 
 
 
-<section id="journey"  style='position: relative;'>
+<section id="journey"  style='position: relative;' id = 'ourJourney'>
 
   <div class='container'>
     <div class="row ">
@@ -147,7 +147,7 @@ line-height: 150%;
     </div>
   </div>
 
-  <img src="img/2/line.png" style="
+  <img src="/img/2/line.png" style="
     position: absolute;
     z-index: 2;
 " class="mt-5 pt-5 offset-md-2 d-none d-md-block">
@@ -194,7 +194,7 @@ line-height: 150%;
     <h5 class = 'subTitle_1 Gray_3 my-3'>Our Leaders</h5>
     <h2 class = 'Gray_1 Title_1 mb-5'>{% block x14 %}AI의 미래를 그리는 사람들{% endblock %}</h2>
     <div class="row row-cols-2 g-4">
-      {% for s in data %}
+      {% for s in data %}                                    
      {% if s.category == 'companyLeader' %}
       <div class="card px-3 border-0 col" >
         <div class="row g-0 h-100 justify-content-between Gray_5_bg">
@@ -205,7 +205,7 @@ line-height: 150%;
             </div>
             <div class="card-footer mt-auto bg-transparent border-0">
                 <ul class="ps-3 mt-auto">
-                  <p class="Gray_1 lBody ps-0" class = 'lHistory-{{ loop.index-8 }}'>{{ s.content | striptags(true) | escape | nl2br}}</p>
+                  <p class="Gray_1 lBody ps-0" class = 'lHistory-{{ loop.index-8 }}'>{% block f1 %}{{ s.content | striptags(true) | escape | nl2br}}{% endblock %}</p>
                   
                 </ul>
                       
@@ -240,7 +240,7 @@ line-height: 150%;
 
         </div>
         <div class="col-md-6">
-          <img src="img/2/2.png" class="img-fluid rounded-start w-100" alt="함께 더빛남">
+          <img src="/img/2/2.png" class="img-fluid rounded-start w-100" alt="함께 더빛남">
         </div>
       </div>
     </div>
@@ -260,7 +260,7 @@ line-height: 150%;
         <div class="swiper-slide">
           <div class="row g-0 h-75">
             <div class="col-md-4 h-100">
-              <img src="img/2/{{ say1[i]['id'] + 3 }}.png" class="img-fluid" alt="{{ i.title }}">
+              <img src="/img/2/{{ say1[i]['id'] + 3 }}.png" class="img-fluid" alt="{{ i.title }}">
             </div>
             <div class="col-md-7 offset-md-1 d-flex flex-column">
               <p class=" Title_3 mt-auto Gray_0">{{say1[i]['title'] }}
@@ -368,7 +368,7 @@ line-height: 150%;
 
       </section>
 
-      <img src='img/2/10.png' class='w-100' style="margin-top: 45vh">
+      <img src='/img/2/10.png' class='w-100' style="margin-top: 45vh" id = 'map'>
       <div class="offset-md-5">
        <div class = "bg-white p-5" style="margin-top: -13vh; position:absolute">
         <p class="SubTitle_1 Gray_2">Contact</p>
@@ -382,7 +382,7 @@ line-height: 150%;
         </div>
         <div class="row my-5">
           <div class="col-md-3 Tab Gray_1">CN.AI Dajeon</div>
-          <div class="col-12 col-auto offset-1 Body_1 lh-lg">{% block x22 %}대전광역시 중구 중앙로 101 대전창업허브 4F<br>
+          <div class="col-12 col-auto offset-1 Body_1 lh-lg">{% block x22 %}대전광역시 중구 중앙로 101 대전창업허브 4F{% endblock %}<br>
             <span class="Point_1">{% block xx22 %}중구청역 도보 3분{% endblock %}</span></div>
         </div>
 
