--- a/views/base.html
+++ b/views/base.html
@@ -153,8 +153,8 @@
             <div class="col-lg-2 col-6 mt-5 my-md-0">
               <h4 class="">Company</h4>
               <div class="ui link list">
-                <a class="item lh-lg goEng" href="/company#CN-HP02-3">Our Core Value</a>
-                <a class="item lh-lg goEng" href="/company#ourJourney"> Our Journey</a>
+                <a class="item lh-lg goEng" href="/company#ourValue">Our Core Value</a>
+                <a class="item lh-lg goEng" href="/company#journey"> Our Journey</a>
                 <a class="item lh-lg goEng" href="/company#mediaKit"> Media Kit</a>
                 <a class="item lh-lg" href="mailto:contact@cnai.ai"> Contact Us</a>
               </div>
@@ -170,8 +170,8 @@
             <div class="col-lg-2 col-6 mt-5 my-md-0">
               <h4 class="">Community</h4>
               <div class="ui link list">
-                <a class="item lh-lg goEng" href="/community#RecentNews">Recent News</a>
-                <a class="item lh-lg goEng" href="/community#">Publications</a>
+                <a class="item lh-lg goEng" href="/community#news">Recent News</a>
+                <a class="item lh-lg goEng d-none" href="/community#">Publications</a>
                 <a class="item lh-lg goEng" href="/community#investment">Investment</a>
                 <a class="item lh-lg d-none" href="/community">Tech Blog</a>
               </div>
