--- a/views/career.html
+++ b/views/career.html
@@ -228,7 +228,7 @@
 
 
 
-  <section id='cards' class='v-75' id = 'ourTeam'>
+  <section class='v-75' id = 'ourTeam'>
     <!-- Swiper -->
 
     <div class="swiper career-slide h-100">
