--- a/views/company.html
+++ b/views/company.html
@@ -97,7 +97,7 @@ line-height: 150%;
 <!-- masthead  -->
 
 
-<section class="card bg-transparent border-0 rounded-0" id = 'CN-HP02-3'>
+<section class="card bg-transparent border-0 rounded-0" id = 'ourValue'>
   <img src="/img/2/1.png" class="card-img rounded-0">
   <div class="card-img-overlay d-flex ">
     <div class="mt-auto mb-5 container" data-aos="fade-up">
@@ -135,7 +135,7 @@ line-height: 150%;
 
 
 
-<section id="journey"  style='position: relative;' id = 'ourJourney'>
+<section id="journey"  style='position: relative;' >
 
   <div class='container'>
     <div class="row ">
