--- a/views/index.html
+++ b/views/index.html
@@ -138,18 +138,18 @@ Class name automatically added to element */
 <!-- The video -->
 <!-- <div class='isBg-1 card rounded-0 border-0 video-container' style="position: relative;">
   <video autoplay muted loop id="myVideo"  style="position:absolute">
-    <source src="img/home/1.mov" type="video/mp4">
+    <source src="/img/home/1.mov" type="video/mp4">
   </video>
   <video autoplay muted loop id="" style="position:absolute">
-    <source src="img/home/Title.mov" type="video/mp4">
+    <source src="/img/home/Title.mov" type="video/mp4">
   </video>
   </div> -->
   <div class='isBg-1 card rounded-0 border-0 masthead'>
     <video autoplay muted loop id="myVideo">
-      <source src="img/home/1.mov" type="video/mp4">
+      <source src="/img/home/1.mov" type="video/mp4">
     </video>
     <div class="card-img-overlay " >
-      <div class="container h-100 justify-content-center text-center align-items-center d-flex" >
+      <div class="container justify-content-center text-center align-items-center d-flex mhome"  >
         <div  data-aos="fade-up">
           <!-- position-absolute 쓰면 fade up 불가 -->
           <h1 class="Title_1 text-white">
@@ -186,23 +186,23 @@ Class name automatically added to element */
 
       <div class="row mb-3">
         <div class="card w-100 border-0 rounded-0 p-0" id="">
-          <img src="img/home/-2.png" class="card-img rounded-0" alt="비즈니스에 가능성을 
+          <img src="/img/home/-2.png" class="card-img rounded-0" alt="비즈니스에 가능성을 
             더하는 AI Human">
 
-          <div class="card-img-overlay c1-img bg-blur" id="tech">
+          <div class="card-img-overlay c1-img" id="tech">
             <div class="container c1-img d-flex flex-column h-100 p-4">
               <div class="row g-0 h-100">
                 <div class="col-md col-12 d-flex flex-column ">
                   <p class="c1-title Title_1_eng mb-0 gray_0 text-white">Data Warehouse</p>
                   <!-- <a href="/coretech" class="Body_1 Gray_1 text-mute">더 알아보기 <i class="angle right icon"></i></a> -->
                   <div class="mt-auto ">
-                    <p class="Body_1 c1 transition visible" style="display: block !important;">CN.AI Data Warehouse 플랫폼은 자동화 된 ML 개발환경과 더불어 합성데이터를 제공하고,
+                    <p class="Body_1 c1 transition hidden" style="display: block !important;">CN.AI Data Warehouse 플랫폼은 자동화 된 ML 개발환경과 더불어 합성데이터를 제공하고,
                       On-premise와 SaaS를 동시에 지원하는 개방적이고 유연한 확장을 지원합니다.</p>
                   </div>
                 </div>
                 <div class="col align-self-end">
-                  <button onclick="showUp($(this).attr('id'),'home')" id="c1" class="align-items-baseline border-0 bg-transparent float-end c-btn c1-btn c-btn-active">
-                    <img class="btn-sm-1" src="img/icon/00 more-dark.png">
+                  <button onclick="showUp($(this).attr('id'),'home')" id="c1" class="align-items-baseline border-0 bg-transparent float-end c-btn c1-btn ">
+                    <img class="btn-sm-1" src="/img/icon/00 more-dark.png">
                   </button>
                 </div>
               </div>
@@ -214,23 +214,23 @@ Class name automatically added to element */
         <div class="col-md-6 col-12 ps-0 pe-md-3 pe-0">
 
           <div class="mb-4 card w-100 border-0 rounded-0 p-0 h-100" id="">
-            <img src="img/home/-1.png" class="card-img rounded-0 h-100" alt="비즈니스에 가능성을 
+            <img src="/img/home/-1.png" class="card-img rounded-0 h-100" alt="비즈니스에 가능성을 
               더하는 AI Human">
 
-            <div class="card-img-overlay c2-img rounded-0 bg-blur" id="" style="height: 100%">
+            <div class="card-img-overlay c2-img rounded-0" id="" style="height: 100%">
               <div class="container c2-img d-flex flex-column h-100 p-4">
                 <div class="row g-0 h-100">
                   <div class="col-md-10 col-12 d-flex flex-column ">
                     <p class="c2-title Title_1_eng mb-0 gray_0 text-white">{% block x4 %}Future AI를 위한 데이터 합성 솔루션{% endblock %}</p>
                     <a href="/coretech#box2" class="Body_1 Gray_1 text-mute">{% block x3 %}더 알아보기{% endblock %} <i class="angle right icon"></i></a>
                     <div class="mt-auto ">
-                      <p class="Body_1 c2 transition visible" style="display: block !important;">empowers super-realistic, biologically-meaningful
+                      <p class="Body_1 c2 transition hidden " style="display: block !important;">empowers super-realistic, biologically-meaningful
                         synthetic data. 데이터 공급이 어려웠던 다양한 분야에 AI를 위한 고품질의 데이터를 무한 공급합니다. </p>
                     </div>
                   </div>
                   <div class="col align-self-end">
-                    <button onclick="showUp($(this).attr('id'),'home')" id="c2" class="align-items-baseline border-0 bg-transparent float-end c-btn c2-btn c-btn-active">
-                      <img class="btn-sm-1" src="img/icon/00 more-dark.png">
+                    <button onclick="showUp($(this).attr('id'),'home')" id="c2" class="align-items-baseline border-0 bg-transparent float-end c-btn c2-btn">
+                      <img class="btn-sm-1" src="/img/icon/00 more-dark.png">
                     </button>
                   </div>
                 </div>
@@ -250,7 +250,7 @@ Class name automatically added to element */
     flex: 1;
 ">
             <div class="mb-3 card w-100 border-0 rounded-0 p-0" id="">
-              <img src="img/home/0.png" class="card-img rounded-0" alt="비즈니스에 가능성을 
+              <img src="/img/home/0.png" class="card-img rounded-0" alt="비즈니스에 가능성을 
               더하는 AI Human">
               <div class="card-img-overlay container c3-img d-flex flex-column h-100 p-5 rounded-0">
                 <div class="row g-0 h-100">
@@ -266,7 +266,7 @@ Class name automatically added to element */
                   </div>
                   <div class="col align-self-end">
                     <button onclick="showUp($(this).attr('id'),'home')" id="c3" class="align-items-baseline border-0 bg-transparent float-end c-btn c3-btn">
-                      <img class="btn-sm-1" src="img/icon/00 more-dark.png">
+                      <img class="btn-sm-1" src="/img/icon/00 more-dark.png">
                     </button>
                   </div>
                 </div>
@@ -288,7 +288,7 @@ Class name automatically added to element */
                   </div>
                   <div class="col my-auto">
                     <a href="mailto:contact@cnai.ai" class="align-items-baseline border-0 Title_3 bg-transparent float-end">
-                      <img class="btn-sm-1" src="img/icon/02 arrow-right-circle-dark.png">
+                      <img class="btn-sm-1" src="/img/icon/02 arrow-right-circle-dark.png">
                     </a>
                   </div>
                 </div>
@@ -349,7 +349,7 @@ Class name automatically added to element */
       <div class="simply-scroll-clip">
         <ul id="scrollerTop" class="simply-scroll-list">
           {% for i in range(1,12) %}
-          <li><img src="img/home/partnerLogo/1/{{ i }}.png" alt="cnai"></li>
+          <li><img src="/img/home/partnerLogo/1/{{ i }}.png" alt="cnai"></li>
           {% endfor %}
         </ul>
       </div>
@@ -359,7 +359,7 @@ Class name automatically added to element */
       <div class="simply-scroll-clip">
         <ul id="scrollerBottom" class="simply-scroll-list">
           {% for i in range(12,22) %}
-          <li><img src="img/home/partnerLogo/2/{{ i }}.png" alt="cnai"></li>
+          <li><img src="/img/home/partnerLogo/2/{{ i }}.png" alt="cnai"></li>
           {% endfor %}
         </ul>
       </div>
@@ -370,7 +370,7 @@ Class name automatically added to element */
 
 <div class='isBg-1 card rounded-0 border-0 d-none'>
   <video autoplay muted loop id="myVideo2">
-    <source src="img/home/2.mp4" type="video/mp4">
+    <source src="/img/home/2.mp4" type="video/mp4">
   </video>
 </div>
 
@@ -429,7 +429,7 @@ Class name automatically added to element */
 {% endblock %}
 
 {% block fB %}mailto:contact@cnai.ai{% endblock %}
-{% block title %}fB {% endblock %}
+{% block title %}{{ fB }} {% endblock %}
 {% block btn %} CONTACT US {% endblock %}
 
 
