--- a/views/community.html
+++ b/views/community.html
@@ -47,7 +47,7 @@
 </section>
 
 
-<section id='news' class='container' id = 'RecentNews'>
+<section id='news' class='container'>
   <p class='my-5 Title_1 Gray_1'>{% block x2 %}한발 빠르게 받아보는 소식 {% endblock%}</p>
   <div class="ui pointing secondary menu border-0">
     <a class="item active " data-tab="first">Recent News</a>
